// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProgramLevelCard > Snapshot Tests > should match snapshot with full details 1`] = `
<div
  class="rounded-lg border bg-card text-card-foreground shadow-sm"
>
  <div
    class="flex flex-col space-y-1.5 p-6"
  >
    <div
      class="flex items-start justify-between gap-4"
    >
      <div
        class="flex-1 min-w-0"
      >
        <h3
          class="text-2xl font-semibold leading-none tracking-tight flex items-center gap-2 flex-wrap"
        >
          <svg
            class="lucide lucide-layers h-5 w-5 flex-shrink-0"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m12.83 2.18a2 2 0 0 0-1.66 0L2.6 6.08a1 1 0 0 0 0 1.83l8.58 3.91a2 2 0 0 0 1.66 0l8.58-3.9a1 1 0 0 0 0-1.83Z"
            />
            <path
              d="m22 17.65-9.17 4.16a2 2 0 0 1-1.66 0L2 17.65"
            />
            <path
              d="m22 12.65-9.17 4.16a2 2 0 0 1-1.66 0L2 12.65"
            />
          </svg>
          <span
            class="truncate"
          >
            Year 1: Foundation
          </span>
          <div
            class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 text-foreground flex-shrink-0"
          >
            Order 
            1
          </div>
        </h3>
        <p
          class="text-sm text-muted-foreground mt-2 line-clamp-2"
        >
          Introduction to computer science fundamentals and programming basics
        </p>
      </div>
    </div>
  </div>
  <div
    class="p-6 pt-0"
  >
    <div
      class="grid grid-cols-2 gap-4"
    >
      <div
        class="flex items-center gap-2 text-sm"
      >
        <svg
          class="lucide lucide-book-open h-4 w-4 text-muted-foreground"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"
          />
          <path
            d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"
          />
        </svg>
        <div>
          <div
            class="font-medium"
          >
            6
          </div>
          <div
            class="text-xs text-muted-foreground"
          >
            Courses
          </div>
        </div>
      </div>
      <div
        class="flex items-center gap-2 text-sm"
      >
        <svg
          class="lucide lucide-award h-4 w-4 text-muted-foreground"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="8"
            r="6"
          />
          <path
            d="M15.477 12.89 17 22l-5-3-5 3 1.523-9.11"
          />
        </svg>
        <div>
          <div
            class="font-medium"
          >
            30
          </div>
          <div
            class="text-xs text-muted-foreground"
          >
            Required Credits
          </div>
        </div>
      </div>
    </div>
    <div
      class="mt-4 pt-4 border-t text-sm"
    >
      <div
        class="text-muted-foreground mb-1"
      >
        Program
      </div>
      <div
        class="flex items-center gap-2"
      >
        <svg
          class="lucide lucide-layers h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m12.83 2.18a2 2 0 0 0-1.66 0L2.6 6.08a1 1 0 0 0 0 1.83l8.58 3.91a2 2 0 0 0 1.66 0l8.58-3.9a1 1 0 0 0 0-1.83Z"
          />
          <path
            d="m22 17.65-9.17 4.16a2 2 0 0 1-1.66 0L2 17.65"
          />
          <path
            d="m22 12.65-9.17 4.16a2 2 0 0 1-1.66 0L2 12.65"
          />
        </svg>
        <span
          class="font-medium"
        >
          Bachelor of Science in Computer Science
        </span>
        <div
          class="inline-flex items-center rounded-full border px-2.5 py-0.5 font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 text-foreground text-xs"
        >
          CS-BSC
        </div>
      </div>
    </div>
    <div
      class="mt-4 pt-4 border-t flex items-center gap-2 text-xs text-muted-foreground"
    >
      <svg
        class="lucide lucide-calendar h-3 w-3"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8 2v4"
        />
        <path
          d="M16 2v4"
        />
        <rect
          height="18"
          rx="2"
          width="18"
          x="3"
          y="4"
        />
        <path
          d="M3 10h18"
        />
      </svg>
      <span>
        Created 
        9/1/2025
      </span>
    </div>
  </div>
</div>
`;

exports[`ProgramLevelCard > Snapshot Tests > should match snapshot with minimal level 1`] = `
<div
  class="rounded-lg border bg-card text-card-foreground shadow-sm"
>
  <div
    class="flex flex-col space-y-1.5 p-6"
  >
    <div
      class="flex items-start justify-between gap-4"
    >
      <div
        class="flex-1 min-w-0"
      >
        <h3
          class="text-2xl font-semibold leading-none tracking-tight flex items-center gap-2 flex-wrap"
        >
          <svg
            class="lucide lucide-layers h-5 w-5 flex-shrink-0"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m12.83 2.18a2 2 0 0 0-1.66 0L2.6 6.08a1 1 0 0 0 0 1.83l8.58 3.91a2 2 0 0 0 1.66 0l8.58-3.9a1 1 0 0 0 0-1.83Z"
            />
            <path
              d="m22 17.65-9.17 4.16a2 2 0 0 1-1.66 0L2 17.65"
            />
            <path
              d="m22 12.65-9.17 4.16a2 2 0 0 1-1.66 0L2 12.65"
            />
          </svg>
          <span
            class="truncate"
          >
            Elective Level
          </span>
          <div
            class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 text-foreground flex-shrink-0"
          >
            Order 
            5
          </div>
        </h3>
      </div>
    </div>
  </div>
  <div
    class="p-6 pt-0"
  >
    <div
      class="grid grid-cols-2 gap-4"
    >
      <div
        class="flex items-center gap-2 text-sm"
      >
        <svg
          class="lucide lucide-book-open h-4 w-4 text-muted-foreground"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"
          />
          <path
            d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"
          />
        </svg>
        <div>
          <div
            class="font-medium"
          >
            0
          </div>
          <div
            class="text-xs text-muted-foreground"
          >
            Courses
          </div>
        </div>
      </div>
    </div>
    <div
      class="mt-4 pt-4 border-t text-sm"
    >
      <div
        class="text-muted-foreground mb-1"
      >
        Program
      </div>
      <div
        class="flex items-center gap-2"
      >
        <svg
          class="lucide lucide-layers h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m12.83 2.18a2 2 0 0 0-1.66 0L2.6 6.08a1 1 0 0 0 0 1.83l8.58 3.91a2 2 0 0 0 1.66 0l8.58-3.9a1 1 0 0 0 0-1.83Z"
          />
          <path
            d="m22 17.65-9.17 4.16a2 2 0 0 1-1.66 0L2 17.65"
          />
          <path
            d="m22 12.65-9.17 4.16a2 2 0 0 1-1.66 0L2 12.65"
          />
        </svg>
        <span
          class="font-medium"
        >
          Bachelor of Science in Computer Science
        </span>
        <div
          class="inline-flex items-center rounded-full border px-2.5 py-0.5 font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 text-foreground text-xs"
        >
          CS-BSC
        </div>
      </div>
    </div>
    <div
      class="mt-4 pt-4 border-t flex items-center gap-2 text-xs text-muted-foreground"
    >
      <svg
        class="lucide lucide-calendar h-3 w-3"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8 2v4"
        />
        <path
          d="M16 2v4"
        />
        <rect
          height="18"
          rx="2"
          width="18"
          x="3"
          y="4"
        />
        <path
          d="M3 10h18"
        />
      </svg>
      <span>
        Created 
        9/1/2025
      </span>
    </div>
  </div>
</div>
`;

exports[`ProgramLevelCard > Snapshot Tests > should match snapshot without details 1`] = `
<div
  class="rounded-lg border bg-card text-card-foreground shadow-sm"
>
  <div
    class="flex flex-col space-y-1.5 p-6"
  >
    <div
      class="flex items-start justify-between gap-4"
    >
      <div
        class="flex-1 min-w-0"
      >
        <h3
          class="text-2xl font-semibold leading-none tracking-tight flex items-center gap-2 flex-wrap"
        >
          <svg
            class="lucide lucide-layers h-5 w-5 flex-shrink-0"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m12.83 2.18a2 2 0 0 0-1.66 0L2.6 6.08a1 1 0 0 0 0 1.83l8.58 3.91a2 2 0 0 0 1.66 0l8.58-3.9a1 1 0 0 0 0-1.83Z"
            />
            <path
              d="m22 17.65-9.17 4.16a2 2 0 0 1-1.66 0L2 17.65"
            />
            <path
              d="m22 12.65-9.17 4.16a2 2 0 0 1-1.66 0L2 12.65"
            />
          </svg>
          <span
            class="truncate"
          >
            Year 1: Foundation
          </span>
          <div
            class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 text-foreground flex-shrink-0"
          >
            Order 
            1
          </div>
        </h3>
        <p
          class="text-sm text-muted-foreground mt-2 line-clamp-2"
        >
          Introduction to computer science fundamentals and programming basics
        </p>
      </div>
    </div>
  </div>
</div>
`;
